# CElda

./: Breadcrumbing.h  Bresenham.cpp  Bresenham.h  CMakeLists.txt  Chocobo.cpp  Chocobo.h  Game.cpp  Game.h  README.md  Rat.cpp  Rat.h  SpectralEye.cpp  SpectralEye.h  Spectre.cpp  Spectre.h  main.cpp  project.godot
art/: font.ttf.import  icon.svg.import
art/Characters/BlueEspectre/: Attack.png.import  Dead.png.import  Idle.png.import  Walk.png.import  blueEspectre.tscn
art/Characters/EspectralEye/: Stand.png.import  Teleport.png.import  espectralEye.tscn
art/Characters/FinalBoss/: AttackLeft.png.import  AttackRight.png.import  ChargeLeft.png.import  ChargeRight.png.import  Hit.png.import  Stand.png.import  Walk.png.import  final_boss.tscn
art/scene/: HP.png.import  Kunai.png.import  Shuriken.png.import  chest.png.import  chest.tscn  door.png.import  fences.png.import  floor_stone.png.import  floor_wood.png.import  objects.png.import  plains.png.import  rupia.png.import  safe_zone.png.import  trap_1.tscn  trap_2.tscn  vase.png.import  vase.tscn  walls.png.import
floors/: boss_floor.tscn  end_game_die.tscn  floor_1.tscn  floor_2.tscn  floor_3.tscn  floor_4.tscn  minimap_1.png.import  minimap_2.png.import  minimap_3.png.import  minimap_4.png.import  minimap_5.png.import  world.tscn
gui/: heart.tscn  hearts_container.tscn
scripts/: blueEspectre.gd  chest.gd  end_game_die.gd  espectralEye.gd  final_boss.gd  flame.gd  floor_1.gd  floor_2.gd  global.gd  greyEspectre.gd  heart.gd  hearts_container.gd  linsak.gd  rat.gd  redEspectre.gd  slime.gd  trap_1.gd  vase.gd
(+55 files in other folders)
